--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 							reader = new FileReader()
 						;
 						reader.onload = function(e){
+							document.body.innerHTML = '';
 							midiFile = MidiFile(e.target.result);
 							console.log(midiFile);
 							parser = Parser(midiFile);
